--- a/source/EXBP.Dipren.Tests/EXBP.Dipren.Tests.csproj
+++ b/source/EXBP.Dipren.Tests/EXBP.Dipren.Tests.csproj
@@ -28,6 +28,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="OpenTelemetry.Exporter.InMemory" Version="1.8.1" />
+    <PackageReference Include="System.Text.Json" Version="9.0.0" />
   </ItemGroup>
 
   <ItemGroup>
